Fixed zone number spacing/alignment

--- a/apps/site/assets/css/_spacing.scss
+++ b/apps/site/assets/css/_spacing.scss
@@ -85,6 +85,10 @@
 }
 
 // Top
+.mt-n5 {
+  margin-top: -.313rem;
+}
+
 .mt-8 {
   margin-top: .5rem;
 }
